# Teamsoftware

./: GUI Gesture system with keyboard and controller.py  GUI Gesture system.py  LICENSE  PyDrawAttempt.py  README.md  commands.txt  drawing specific landmark  hand-signs-python311 with joystick controls and two hands.py  hand-signs-python311 with keyboard controls and two hands - Copy.py  hand-signs-python311 with keyboard controls and two hands.py  hand-signs-python311 with keyboard controls.py  hand-signs-python311.py  readme.txt  requirements.txt  tkinter v1.py
DockerImage/: dockerfile  expect_response.exp  hand-signs.py
gestures-to-keypress/: dockerfile  hand-signs.py
spot_telop/: CMakeLists.txt  package.xml  spot_teleop.py
spot_telop/launch/: teleop.launch
