<?xml version="1.0"?>
<package>
    <name>spot_teleop</name>
    <version>0.1.1</version>
    <description>Spot keyboard controls</description>

    <maintainer email="bahtesmail@proton.me">Isaac Bates></maintainer>

    <license>BSD</license>

    <url type="website"></url>

    <author>Isaac Bates</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>geometry_msgs</run_depend>
    <run_depend>joy</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>sensor_msgs</run_depend>
</package>
